# lve_vulkan

./: README.md  meson.build  shaders.sh
include/: app.h  lve_device.h  lve_pipeline.h  lve_vulkan.h  lve_window.h  utils.h
shaders/: simple_frag.frag  simple_shader.vert
src/: app.c  lve_device.c  lve_pipeline.c  lve_vulkan.c  lve_window.c  main.c
